@startuml
class Student{
    - firstName: String
    - lastName: String
}

class Teacher {
    - firstName: String
    - lastName: String
}

class Subject {
    - name: String
    - List<competence> competence: List<competence>
}
class Competence {
    - String competences: String
    - String description: String
}

class Exam{
    - Student student: Student
    - Teacher teacher: Teacher
    - Subject subject: Subject
    - grade: int
    - passedExam: boolean
    - date: Datetime
    - attempt: int
    - List<Competence> competence: List<Competence>
}


Student "1" -- "1..1" Exam
Teacher "1" -- "1..1" Exam
Subject "1" -- "1..1" Exam
Subject "1" -- "1..*" Competence

@enduml